[package]
name = "lxpc"
version = "0.1.0"
edition = "2024"
license = "MIT"

[lib]
name = "lxpc"
crate-type = ["cdylib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
ciborium = "0.2"
libc = "0.2"
# Wir nutzen nix 0.29 (passend zu Edition 2024)
nix = { version = "0.29", features = ["socket", "fs", "process", "uio"] }