[package]
name = "lxpc"
version = "0.1.0"
edition = "2021"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
disable_pid_check = []

[dependencies]
ciborium = "0.2"
nix = { version = "0.29", features = ["socket", "uio", "user", "time"] }
libc = "0.2"
serde = { version = "1", features = ["derive"] }
tracing = "0.1"

[build-dependencies]
cbindgen = "0.29"

[profile.release]
panic = "abort"
